kubernetes/deployment-devops-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-deployment
  labels:
    app: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops-container
        image: rmillav201/devop
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-volume
          mountPath: /data/shared
      volumes:
      - name: shared-volume
        persistentVolumeClaim:
          claimName: shared-volume-claim
