kubernetes/devops-demo-profesional-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-profesional-ingress
spec:
  tls:
  - hosts:
    - devops.devs
    secretName: devops-tls-secret
  rules:
  - host: devops.devsu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: devops-demo-service
            port:
              number: 8000
